--- a/package.json
+++ b/package.json
@@ -5,11 +5,20 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "export": "next export",
     "start": "next start",
     "lint": "eslint"
   },
   "dependencies": {
+    "@capacitor/android": "^7.4.4",
+    "@capacitor/app": "^7.1.0",
+    "@capacitor/cli": "^7.4.4",
+    "@capacitor/core": "^7.4.4",
+    "@supabase/supabase-js": "^2.86.0",
+    "autoprefixer": "^10.4.22",
+    "lucide-react": "^0.555.0",
     "next": "16.0.5",
+    "postcss": "^8.5.6",
     "react": "19.2.0",
     "react-dom": "19.2.0"
   },
@@ -20,7 +29,7 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "16.0.5",
-    "tailwindcss": "^4",
+    "tailwindcss": "^4.1.17",
     "typescript": "^5"
   }
 }
