--- a/package.json
+++ b/package.json
@@ -5,20 +5,14 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "export": "next export",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "next lint"
   },
   "dependencies": {
-    "@capacitor/android": "^7.4.4",
-    "@capacitor/app": "^7.1.0",
-    "@capacitor/cli": "^7.4.4",
-    "@capacitor/core": "^7.4.4",
     "@supabase/supabase-js": "^2.86.0",
-    "autoprefixer": "^10.4.22",
+    "bcryptjs": "^3.0.3",
     "lucide-react": "^0.555.0",
     "next": "16.0.5",
-    "postcss": "^8.5.6",
     "react": "19.2.0",
     "react-dom": "19.2.0"
   },
@@ -31,5 +25,8 @@
     "eslint-config-next": "16.0.5",
     "tailwindcss": "^4.1.17",
     "typescript": "^5"
+  },
+  "engines": {
+    "node": ">=18.17.0"
   }
 }
